--- a/app/src/main/res/layout/item_sandwich.xml
+++ b/app/src/main/res/layout/item_sandwich.xml
@@ -6,43 +6,43 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/photo"
+        android:id="@+id/imageview_photo"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:src="@drawable/sandwiches"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/ingredients"/>
+        app:layout_constraintEnd_toStartOf="@id/textview_ingredients"/>
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/textview_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         style="@android:style/TextAppearance.Large"
-        app:layout_constraintStart_toEndOf="@id/photo"
+        app:layout_constraintStart_toEndOf="@id/imageview_photo"
         tools:text="X-Burger"/>
 
     <TextView
-        android:id="@+id/ingredients"
+        android:id="@+id/textview_ingredients"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:ellipsize="end"
-        app:layout_constraintStart_toEndOf="@id/photo"
+        app:layout_constraintStart_toEndOf="@id/imageview_photo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name"
+        app:layout_constraintTop_toBottomOf="@id/textview_name"
         tools:text="Burger, Cheese, Bacon"/>
 
     <TextView
-        android:id="@+id/price"
+        android:id="@+id/textview_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimaryDark"
         android:text="R$ 10.00"
         style="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toEndOf="@id/photo"
-        app:layout_constraintTop_toBottomOf="@id/ingredients"
+        app:layout_constraintStart_toEndOf="@id/imageview_photo"
+        app:layout_constraintTop_toBottomOf="@id/textview_ingredients"
         tools:text="R$ 10.00"/>
 </android.support.constraint.ConstraintLayout>
