--- a/app/src/main/res/layout/item_sandwich.xml
+++ b/app/src/main/res/layout/item_sandwich.xml
@@ -2,26 +2,35 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_begin="88dp"
+        android:orientation="vertical"/>
+
     <ImageView
         android:id="@+id/imageview_photo"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:src="@drawable/sandwiches"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/textview_ingredients"/>
+        app:layout_constraintEnd_toStartOf="@id/guideline"/>
 
     <TextView
         android:id="@+id/textview_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        style="@android:style/TextAppearance.Large"
-        app:layout_constraintStart_toEndOf="@id/imageview_photo"
+        style="@android:style/TextAppearance.Medium"
+        app:layout_constraintStart_toEndOf="@id/guideline"
         tools:text="X-Burger"/>
 
     <TextView
@@ -30,7 +39,7 @@
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:ellipsize="end"
-        app:layout_constraintStart_toEndOf="@id/imageview_photo"
+        app:layout_constraintStart_toEndOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_name"
         tools:text="Burger, Cheese, Bacon"/>
@@ -40,9 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimaryDark"
-        android:text="R$ 10.00"
         style="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toEndOf="@id/imageview_photo"
+        app:layout_constraintStart_toEndOf="@id/guideline"
         app:layout_constraintTop_toBottomOf="@id/textview_ingredients"
         tools:text="R$ 10.00"/>
 </android.support.constraint.ConstraintLayout>
