Improving item_sandwich layout

--- a/app/src/main/res/layout/item_sandwich.xml
+++ b/app/src/main/res/layout/item_sandwich.xml
@@ -4,6 +4,8 @@
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -11,7 +13,7 @@
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintGuide_begin="88dp"
+        app:layout_constraintGuide_begin="72dp"
         android:orientation="vertical"/>
 
     <ImageView
@@ -21,8 +23,7 @@
         android:src="@drawable/sandwiches"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/guideline"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textview_name"
