--- a/app/src/main/res/layout/fragment_offers_list.xml
+++ b/app/src/main/res/layout/fragment_offers_list.xml
@@ -6,14 +6,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_offerd"
+        android:id="@+id/recyclerview_offers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
     <TextView
         android:id="@+id/textview_empty_message"
