--- a/app/src/main/res/layout/fragment_offers_list.xml
+++ b/app/src/main/res/layout/fragment_offers_list.xml
@@ -13,7 +13,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/textview_empty_message"
