--- a/app/src/main/res/layout/activity_sandwich_details.xml
+++ b/app/src/main/res/layout/activity_sandwich_details.xml
@@ -43,7 +43,7 @@
         tools:text="R$10,00" />
 
     <TextView
-        android:id="@+id/textview_label"
+        android:id="@+id/textview_ingredients_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingEnd="8dp"
@@ -67,6 +67,34 @@
         android:paddingTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_label"
+        app:layout_constraintTop_toBottomOf="@+id/textview_ingredients_label"
         tools:text="Burger\nbacon" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <TextView
+        android:id="@+id/textview_error_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableTop="@drawable/ic_sentiment_very_dissatisfied"
+        android:drawablePadding="10dp"
+        android:drawableTint="@android:color/darker_gray"
+        android:gravity="center"
+        android:text="@string/generic_list_error_message"
+        android:textColor="@android:color/darker_gray"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="gone"
+        tools:text="@string/generic_list_error_message"/>
 </android.support.constraint.ConstraintLayout>
