--- a/app/src/main/res/layout/activity_sandwich_details.xml
+++ b/app/src/main/res/layout/activity_sandwich_details.xml
@@ -70,6 +70,17 @@
         app:layout_constraintTop_toBottomOf="@+id/textview_ingredients_label"
         tools:text="Burger\nbacon" />
 
+    <Button
+        android:id="@+id/button_order"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/order_button"
+        android:paddingBottom="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="@string/order_button"/>
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
