--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -28,13 +28,16 @@
     <TextView
         android:id="@+id/textview_name"
         style="@android:style/TextAppearance.Medium"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:maxLines="3"
+        android:ellipsize="end"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintEnd_toStartOf="@+id/textview_price"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="X-Burger" />
+        tools:text="X-Burger - Customized by you" />
 
     <TextView
         android:id="@+id/textview_price"
@@ -43,6 +46,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textview_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="R$ 10.00" />
