--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -9,9 +9,10 @@
         android:id="@+id/textview_total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
+        android:background="@android:color/white"
+        android:textColor="@color/colorAccent"
         android:textAlignment="textEnd"
+        android:elevation="2dp"
         style="@style/TextAppearance.AppCompat.Medium"
         android:padding="16dp"
         app:layout_constraintStart_toStartOf="parent"
