--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -34,48 +34,23 @@
         android:id="@+id/textview_empty_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawablePadding="10dp"
-        android:drawableTint="@android:color/darker_gray"
         android:drawableTop="@drawable/ic_sentiment_dissatisfied"
-        android:gravity="center"
-        android:text="@string/order_item_list_empty_message"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@android:color/darker_gray"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/sandwiches_list_empty_message"
-        tools:visibility="gone" />
-
-    <TextView
-        android:id="@+id/textview_error_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:drawablePadding="10dp"
         android:drawableTint="@android:color/darker_gray"
-        android:drawableTop="@drawable/ic_sentiment_very_dissatisfied"
         android:gravity="center"
-        android:text="@string/generic_list_error_message"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@android:color/darker_gray"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/generic_list_error_message"
-        tools:visibility="gone" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/sandwiches_list_empty_message"
+        tools:visibility="gone"
+        tools:text="@string/ingredients_list_empty_message"/>
+
+    <include layout="@layout/error_layout" />
+
+    <include layout="@layout/progress_bar" />
 
 </android.support.constraint.ConstraintLayout>
